@@ -74,6 +74,19 @@ gdb_test "bt full" \
     ".*#0.*cnuf_dne.*h = 9.*f = 42.*g = 19.*bar = $hex \"Inside block x2\".*d = 15.*e = 14.*foo = $hex \"Inside block\".*str = $hex \"The End\".*st2 = $hex \"Is Near\".*b = 12.*c = 5.*" \
     "bt full with filters"
 
+# Test pagination can be aborted even for frame filters.
+gdb_test_no_output "set height 5" "pagination quit - set height limited"
+foreach bttype [list "bt" "bt full"] {
+    set test "pagination quit - $bttype"
+    gdb_test_multiple "$bttype" $test {
+	-re "$pagination_prompt$" {
+	    pass $test
+	}
+    }
+    gdb_test "q" "^q\r\nQuit" "pagination quit - $bttype - q"
+}
+gdb_test_no_output "set height unlimited" "pagination quit - set height unlimited"
+
 gdb_continue_to_breakpoint "Backtrace end breakpoint"
 
 # Test set/show
